# lazy_attractor

./: .gitmodules  CMakeLists.txt  converter_main.cpp  greedy_main.cpp  lazy_main.cpp  main.cpp  msubstr_main.cpp  readme.md  verify_main.cpp
include/greedy/: greedy_attractor.hpp
include/lazy/: lazy_attractor.hpp  lowest_node_query.hpp  union_find_tree.hpp
lib/greedy/: g_dynamic_interval_tree.cpp  greedy_attractor.cpp  position_frequency_set.cpp
lib/lazy/: dynamic_interval_tree.cpp  lazy_attractor.cpp  lowest_node_query.cpp  union_find.cpp  union_find_tree.cpp
main/: appro_2_attrs_main.cpp  converter_main.cpp  demo_main.cpp  exact_2_attrs_main.cpp  greedy_main.cpp  lazy_main.cpp  macro_main.cpp  print_main.cpp  verify_main.cpp
scripts/: greedy.sh  lazy.sh
src/: binary.hpp  common.hpp  constants.hpp  fmindex.hpp  greedy_attractor.cpp  greedy_attractor.hpp  io.h  lcp_interval.cpp  lcp_interval.hpp  minimal_substrings.cpp  minimal_substrings.hpp  mstree.cpp  mstree.hpp  offline_suffix_tree.cpp  offline_suffix_tree.hpp  print.hpp  sa_lcp.cpp  sa_lcp.hpp  verification_attractor.hpp
src/greedy/: faster_greedy_attractor.cpp  faster_greedy_attractor.hpp  g_dynamic_interval_tree.cpp  g_dynamic_interval_tree.hpp  greedy_attractor.cpp  greedy_attractor.hpp  position_frequency_set.cpp  position_frequency_set.hpp
src/lazy/: dynamic_interval_tree.cpp  dynamic_interval_tree.hpp  lazy_attractor.cpp  lazy_attractor.hpp  lazy_uftree.cpp  lazy_uftree.hpp  leaf_rank.cpp  leaf_rank.hpp  lowest_node_query.cpp  lowest_node_query.hpp  range_array.cpp  range_array.hpp  uftree.cpp  uftree.hpp  union_find.cpp  union_find.hpp  union_find_tree.cpp  union_find_tree.hpp
src/main/: appro_2_attrs_main.cpp  converter_main.cpp  demo_main.cpp  exact_2_attrs_main.cpp  greedy_main.cpp  lazy_main.cpp  print_main.cpp  verify_main.cpp
src/ms/: minimal_substring_tree.cpp  minimal_substring_tree.hpp  online_lcp_interval.cpp  online_lcp_interval.hpp  online_ms_interval.cpp  online_ms_interval.hpp
src/obsolete/: lazy_attractor.cpp  lazy_attractor.hpp  minimal_substrings.cpp  minimal_substrings.hpp
src/old/: fmindex.hpp  main.cpp  sa_lcp.cpp  sa_lcp.hpp
src/old/ms/: minimal_substring_tree.cpp  minimal_substring_tree.hpp  online_lcp_interval.hpp  online_ms_interval.hpp
src/old/ms/fast/: fast_mstree.cpp  fast_mstree.hpp
src/test/: macro_main.cpp  test_main.cpp
